fixed overflow issue

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -213,11 +213,12 @@ nav .logo img{
         text-align: center;
     }
     .banner aside img{
-        /* transform: scale(1); */
+        transform: scale(1);
         height: 100%;
     }
 }
 @media screen and (max-width:760px){
+    
   .container{
       padding: 0 20px;
   }
@@ -278,6 +279,7 @@ nav .logo img{
   .navbar-nav.show + .nav-toggle span:nth-of-type(odd){
       transform: translateX(-50px);
   }
+
 }
 
 @media screen and (max-width:600px){
@@ -294,5 +296,8 @@ nav .logo img{
     .desc-words{
         font-size: 14px;
         line-height: 15px;
+    }
+    .hide-sm{
+        display: none;
     }
 }
